# paras-nft-contract

./: .Cargo.toml.swp  .gitignore  Cargo.toml  Makefile  README.md  _rust_setup.sh  build.sh  package-lock.json  package.json
.github/workflows/: rust.yml
contract/: Cargo.toml
contract/src/: lib.rs
neardev/: dev-account  dev-account.env
paras-nft-contract/: Cargo.toml
paras-nft-contract/src/: event.rs  lib.rs
release/: paras_nft_contract.wasm
test/: api.test.js  config.js
tests/: simulation_tests.rs
