[package]
name = "paras-nft-contract-wrapper"
version = "0.0.1"
authors = ["Irfianto <irfi@paras.id>"]
edition = "2018"

[dev-dependencies]
near-sdk = "=3.1.0"
near-contract-standards = "3.2.0"
near-sdk-sim = "=3.1.0"
paras-nft-contract = { path = "./paras-nft-contract" }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = [
  "paras-nft-contract",
]