[package]
name = "paras-nft-contract-wrapper"
version = "0.0.1"
authors = ["Irfianto <irfi@paras.id>"]
edition = "2018"

[dev-dependencies]
near-sdk = "=4.0.0-pre.9"
near-contract-standards = "4.0.0-pre.9"
near-sdk-sim = "=3.2.0"
paras-nft-contract = { path = "./paras-nft-contract" }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = [
  "paras-nft-contract",
]